<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.mycourse.CourseUpdate">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0547EF"
            android:orientation="horizontal"
            android:verticalScrollbarPosition="defaultPosition">

            <ImageView
                android:id="@+id/backbutton"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="12dp"
                android:src="@drawable/arrow_back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Course Update"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textColor="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/teal_200">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="Update Course"
                    android:textSize="50sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="25dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="Course Title"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etupdatecoursetitle"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/custom_inputfield"
                    android:hint="Course Title..."
                    android:paddingStart="12dp"
                    android:paddingLeft="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="Course Category"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/etupdatecoursecategory"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/custom_inputfield"
                    android:hint="Course Category..."
                    android:inputType="textEmailAddress"
                    android:paddingStart="12dp"
                    android:paddingLeft="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="Course Description"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etupdatecoursedesc"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/custom_inputfield"
                    android:hint="Course Description..."
                    android:paddingStart="12dp"
                    android:paddingLeft="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="File Title"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etupdatefiletitle"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/custom_inputfield"
                    android:hint="File Title..."
                    android:paddingStart="12dp"
                    android:paddingLeft="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="File"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/tvupdatefile"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/file"
                    android:paddingStart="12dp"
                    android:paddingLeft="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnupdatecourse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/login_btn"
                    android:text="Update Course"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="23sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>