...
                        android:textStyle="bold"
                        android:textColor="#323131"
                        android:letterSpacing="0.03"
                        android:layout_marginLeft="10dp"/>

                    <TextView
                        android:id="@+id/txtandroidbtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="View Resources"
                        android:layout_below="@+id/txtDesc"
                        android:layout_marginTop="20dp"
                        android:layout_toRightOf="@+id/imgAndroid"
                        android:gravity="end"
                        android:textStyle="bold"
                        android:textSize="17sp"
...
