<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/linearlayout"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        android:gravity="center"
        android:layout_gravity="center">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:layout_marginBottom="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email/Username"
                android:layout_marginBottom="8dp"
                android:textColor="@color/black"
                android:textSize="18sp"/>
            <EditText
                android:id="@+id/etuser"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:drawableLeft="@drawable/person"
                android:drawablePadding="12dp"
                android:hint="Email/Username..."
                android:background="@drawable/custom_inputfield"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:paddingLeft="12dp"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Password"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp"
                android:textSize="18sp"/>
            <EditText
                android:id="@+id/etpass"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:drawableLeft="@drawable/lock"
                android:hint="Password..."
                android:drawablePadding="12dp"
                android:background="@drawable/custom_inputfield"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:layout_marginBottom="20dp"
                android:textSize="18sp"/>
            <Button
                android:id="@+id/btnlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:background="@drawable/login_btn"
                android:text="Login"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:gravity="end"
                    android:text="Don't have an account?"/>
                <TextView
                    android:id="@+id/tvsignup"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_marginLeft="5dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal_200"
                    android:textSize="18sp"
                    android:text="Sign Up Now!"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>