<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.profile.ProfileUpdateActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0547EF"
        android:orientation="horizontal"
        android:verticalScrollbarPosition="defaultPosition">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="12dp"
            android:src="@drawable/arrow_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="Edit Profile"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:textColor="@color/white" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:background="@drawable/side_nav_bar"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/Uppimage"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/person" />


                <ImageView
                    android:id="@+id/btnChangeImage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:selectAllOnFocus="true"
                    android:layout_marginLeft="52dp"
                    android:layout_marginTop="-22dp"
                    android:src="@drawable/flip_camera" />

                <EditText
                    android:id="@+id/etPFullname"
                    style="@style/TextName"
                    android:selectAllOnFocus="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:hint="Full Name" />

                <EditText
                    android:id="@+id/etPBio"
                    style="@style/TextBlackTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:selectAllOnFocus="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:hint="Bio"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:background="#C6DDEF"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/person" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextBlackTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Username"
                            android:textColor="@color/light" />

                        <EditText
                            android:id="@+id/etPUsername"
                            style="@style/TextDescription"
                            android:selectAllOnFocus="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Username"
                            android:textColor="@color/light" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="10dp"
                        android:padding="4dp"
                        android:src="@drawable/phone" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextBlackTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Phone"
                            android:textColor="@color/light" />

                        <EditText
                            android:id="@+id/etPPhone"
                            style="@style/TextDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:selectAllOnFocus="true"
                            android:hint="Phone"
                            android:textColor="@color/light" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="10dp"
                        android:padding="4dp"
                        android:src="@drawable/email" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextBlackTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Email"
                            android:textColor="@color/light" />

                        <EditText
                            android:id="@+id/etPEmail"
                            style="@style/TextDescription"
                            android:selectAllOnFocus="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Email"
                            android:textColor="@color/light" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="10dp"
                        android:padding="4dp"
                        android:src="@drawable/location" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextBlackTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Address"
                            android:textColor="@color/light" />

                        <EditText
                            android:id="@+id/etPAddress"
                            style="@style/TextDescription"
                            android:selectAllOnFocus="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Address"
                            android:textColor="@color/light" />

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btnPeditprofile"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/login_btn"
                    android:gravity="center"
                    android:text="Update"
                    android:textAllCaps="false"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>